Bug 385168 - Changing input locale leads to sticky ALT key p=Dainis Jonitis <jonitis@gmail.com> r=ere, sr=roc